--- a/Views/NewAccountsVC.xib
+++ b/Views/NewAccountsVC.xib
@@ -7,7 +7,8 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NewAccountsVC">
             <connections>
                 <outlet property="accountDescription" destination="LjJ-fH-dK5" id="txA-7x-gsi"/>
-                <outlet property="accountType" destination="kYn-I6-CaE" id="UA2-Q5-ws8"/>
+                <outlet property="accountTypeButton" destination="2MP-UR-eCg" id="ZU3-TQ-PsR"/>
+                <outlet property="createAccountButton" destination="GdI-gF-Kqw" id="099-Wv-TPm"/>
                 <outlet property="view" destination="iN0-l3-epB" id="S12-3M-jGX"/>
             </connections>
         </placeholder>
@@ -20,20 +21,32 @@
                     <rect key="frame" x="50" y="107" width="221" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" returnKeyType="next" enablesReturnKeyAutomatically="YES"/>
+                    <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                     <connections>
                         <outlet property="delegate" destination="-1" id="jjk-7W-Zmt"/>
                     </connections>
                 </textField>
-                <textField opaque="NO" clipsSubviews="YES" tag="11" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Account Type" minimumFontSize="17" clearButtonMode="always" id="kYn-I6-CaE">
-                    <rect key="frame" x="50" y="161" width="221" height="30"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" buttonType="roundedRect" lineBreakMode="tailTruncation" id="2MP-UR-eCg">
+                    <rect key="frame" x="50" y="154" width="210" height="24"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
+                    <state key="normal" title="Select Account Type">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
                     <connections>
-                        <outlet property="delegate" destination="-1" id="kcd-Du-6qk"/>
+                        <action selector="showAccountTypes" destination="-1" eventType="touchUpInside" id="btw-An-sXl"/>
                     </connections>
-                </textField>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="GdI-gF-Kqw">
+                    <rect key="frame" x="50" y="194" width="159" height="22"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                    <state key="normal" title="Create">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="createAccount" destination="-1" eventType="touchUpInside" id="zni-wc-XqJ"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
